--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
